# sachi

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  premake5.lua
docs/: api.rst  conf.py  index.rst  intro.rst  roadmap.rst
sachi/: Makefile.am  bytecode.c  bytecode.h  compile.c  compile.h  config.h  interpreter.c  interpreter.h  main.cpp  module.c  module.h  node.c  node.h  nodemetadata.c  nodemetadata.h  nodevisitor.c  nodevisitor.h  parser.c  parser.h  pinmetadata.c  pinmetadata.h  posix.h  sachi.c  sachi.h
sachi/node/: builtin.c  builtin.h  json.c  json.h
sachi/object/: bool.c  bool.h  callstack.c  callstack.h  dict.c  dict.h  func.c  func.h  int.c  int.h  interpreter.c  interpreter.h  list.c  list.h  node.c  node.h  nodeinstance.c  nodeinstance.h  object.c  object.h  pin.c  pin.h  string.c  string.h
sachi/object/json/: jsonnode.c  jsonnode.h  jsonpin.c  jsonpin.h
sachi/object/metadata/: metadatanode.c  metadatanode.h  metadatapin.c  metadatapin.h
test/: Makefile.am  guideline.json  main.cpp  test.json  test_case.h  test_dict.h  test_helloworld.json  test_int.h  test_json.h  test_list.h  test_node.h  test_programs.h  test_string.h
test/programs/: test_if.json  test_primitives.json
